# py-web-hw8

./: README.md
pyW-hw8/: pyproject.toml
pyW-hw8/part1/: connect.py  db_commands.py  db_models.py  load_data.py  search_qoutes.py
pyW-hw8/part2/: connect.py  consumer.py  consumer_email.py  consumer_sms.py  db_models.py  producer.py
